# fiskaly_sdk

./: .gitignore  README.md  __init__.py  client.py  config.py  exceptions.py  logging_config.py  pyproject.toml  requirements.txt  setup.py  utils.py  version.py
api/: __init__.py  api_keys.py  auth.py  clients.py  exports.py  invoice_search.py  invoice_xml.py  invoices.py  management_auth.py  organizations.py  signers.py  software.py  taxpayer.py  taxpayer_agreement.py
docs/: API_REFERENCE.md
examples/: advanced_invoicing.py  basic_usage.py  clients_usage.py  error_handling.py  export_invoices.py  flow_taxpayer_to_invoice.py  global_invoice_search.py  invoice_xml.py  signers_usage.py  software_info.py  taxpayer_agreement.py
models/: __init__.py  api_key.py  auth.py  client.py  export.py  invoice.py  management_auth.py  organization.py  signer.py  software.py  taxpayer.py  taxpayer_agreement.py
tests/: conftest.py  test_auth.py  test_clients.py  test_exports.py  test_invoice_search.py  test_invoice_xml.py  test_invoices.py  test_signers.py  test_software.py  test_taxpayer.py  test_taxpayer_agreement.py
